[package]
name = "http-alu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.0"
bitflags = "2.5.0"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.0", features = ["cors"] }
